# intel-edison-booming-box

./: CMakeLists.txt  README.md
init_scripts/: audioapp.service  register.sh  run.js  unregister.sh
src/: .fuse_hidden0000004300000002  Application.h  AudioDevice.h  SystemTime.h  main.cpp
src/app/: SFPlayer.h
